--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.5.5",
     "element-ui": "^2.11.1",
     "vue": "^2.6.10"
   },
@@ -13,17 +14,20 @@
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.2",
+    "less-loader": "^5.0.0",
+    "url-loader": "^2.1.0",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config ./config/webpack.prod.conf.js",
     "dev": "webpack-dev-server --config ./config/webpack.dev.conf.js"
   }
 }
