--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.5.5",
     "element-ui": "^2.11.1",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.2",
     "less-loader": "^5.0.0",
+    "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
