--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
+    "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^3.1.0",
+    "express": "^4.17.1",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.2",
@@ -25,6 +27,7 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.1"
   },
